--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.2.7",
+    "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "react": "16.4.1",
     "react-dom": "^16.4.0",
     "react-scripts-ts": "2.16.0",
-    "webpanel-antd": "^0.0.12",
+    "webpanel-antd": "0.0.13",
     "webpanel-auth": "0.0.13",
     "webpanel-data": "^0.0.18"
   },
@@ -22,7 +23,6 @@
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.2",
     "@types/react": "16.4.1",
-    "@types/react-dom": "^16.0.6",
     "mobx": "^5.0.3",
     "typescript": "^2.9.1"
   }
