--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "example",
   "version": "0.1.0",
   "private": true,
+  "main":"src/index.tsx",
   "dependencies": {
     "@types/react-router-dom": "^4.2.7",
     "mobx": "^5.0.3",
