Update layout and dependencies

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts-ts": "2.16.0",
     "webpanel-antd": "0.0.13",
     "webpanel-auth": "0.0.13",
-    "webpanel-data": "^0.0.18"
+    "webpanel-data": "0.0.19"
   },
   "scripts": {
     "start": "react-scripts-ts start",
