--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/react-router-dom": "^4.2.7",
     "@types/recharts": "^1.0.25",
+    "antd": "^3.7.3",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
     "react": "16.4.1",
@@ -26,7 +27,7 @@
   "devDependencies": {
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.2",
-    "@types/react": "16.4.1",
+    "@types/react": "16.4.7",
     "typescript": "^2.9.1"
   }
 }
