--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "main": "src/index.tsx",
   "dependencies": {
-    "@types/react-router-dom": "^4.2.7",
-    "@types/recharts": "^1.0.25",
     "antd": "^3.7.3",
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
-    "react": "16.4.1",
-    "react-dom": "^16.4.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.2",
     "react-scripts-ts": "2.16.0",
     "recharts": "^1.1.0",
     "webpanel-antd": "0.0.16",
@@ -28,6 +26,8 @@
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.2",
     "@types/react": "16.4.7",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/recharts": "^1.0.25",
     "typescript": "^2.9.1"
   }
 }
