--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@types/jest": "^23.0.0",
     "@types/node": "^10.3.2",
-    "@types/react": "16.4.7",
+    "@types/react": "^16.4.7",
     "@types/react-router-dom": "^4.2.7",
     "@types/recharts": "^1.0.25",
     "typescript": "^2.9.1"
