--- a/package.json
+++ b/package.json
@@ -1,29 +1,74 @@
 {
-  "name": "example",
+  "name": "cms",
   "version": "0.1.0",
   "private": true,
-  "main": "src/index.tsx",
   "dependencies": {
-    "@types/react-router-dom": "^4.2.7",
+    "@ant-design/icons": "^4.2.2",
+    "@react-keycloak/web": "^2.1.1",
+    "@sentry/react": "^5.27.3",
+    "@sentry/tracing": "^5.27.3",
+    "@types/dotenv": "^4.0.3",
+    "@types/graphql": "^14.0.4",
+    "@types/moment": "^2.13.0",
+    "@types/numeral": "0.0.25",
+    "@types/react-infinite-scroller": "^1.0.7",
+    "@types/react-router-dom": "^5.1.5",
+    "acl-permissions": "0.0.9",
+    "ant-design-pro": "2.2.1",
+    "antd": "^4.7.3",
+    "dotenv": "^6.0.0",
+    "firebase": "^7.14.1",
+    "graphql": "^14.0.2",
+    "graphql-orm-connetor": "^0.1.3",
+    "graphql-tag": "^2.10.0",
+    "i18next": "^17.0.14",
+    "i18next-browser-languagedetector": "^3.0.3",
+    "i18next-xhr-backend": "^3.1.2",
+    "keycloak-js": "^12.0.1",
+    "mixpanel-browser": "^2.35.0",
     "mobx": "^5.0.3",
-    "mobx-react": "^5.2.3",
-    "react": "16.4.1",
-    "react-dom": "^16.4.0",
-    "react-scripts-ts": "2.16.0",
-    "webpanel-antd": "0.0.13",
-    "webpanel-auth": "0.0.13",
-    "webpanel-data": "0.0.19"
+    "mobx-react": "^5.4.4",
+    "moment": "^2.29.1",
+    "numeral": "^2.0.6",
+    "react-chat-widget": "^2.1.4-1",
+    "react-i18next": "^10.12.3",
+    "react-infinite-scroller": "^1.2.1",
+    "react-markdown": "^4.3.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts-ts": "^3.1.0",
+    "sw-precache-cra": "^1.0.0-alpha.2",
+    "webpanel-admin": "git+https://github.com/webpanel/admin.git#bc755dc",
+    "webpanel-antd": "^0.2.10",
+    "webpanel-comments": "^0.1.3",
+    "webpanel-data": "^0.2.9",
+    "webpanel-files": "^0.3.4",
+    "webpanel-i18n": "^0.1.0",
+    "webpanel-notifications": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "build": "react-scripts-ts build && sw-precache-cra --config sw-config.js",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
-    "@types/jest": "^23.0.0",
-    "@types/node": "^10.3.2",
-    "@types/react": "16.4.1",
-    "typescript": "^2.9.1"
+    "@babel/core": "^7.6.3",
+    "@storybook/addon-actions": "^5.2.3",
+    "@storybook/addon-links": "^5.2.3",
+    "@storybook/addons": "^5.2.3",
+    "@storybook/react": "^5.2.3",
+    "@types/jest": "^23.3.1",
+    "@types/mixpanel-browser": "^2.35.0",
+    "@types/node": "^10.5.8",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
+    "react-docgen-typescript-loader": "^3.3.0",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
+    "typescript": "^4.2.3"
   }
 }
