--- a/package.json
+++ b/package.json
@@ -4,47 +4,25 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "@react-keycloak/web": "^2.1.1",
-    "@sentry/react": "^5.27.3",
-    "@sentry/tracing": "^5.27.3",
-    "@types/dotenv": "^4.0.3",
-    "@types/graphql": "^14.0.4",
-    "@types/moment": "^2.13.0",
-    "@types/numeral": "0.0.25",
-    "@types/react-infinite-scroller": "^1.0.7",
     "@types/react-router-dom": "^5.1.5",
-    "acl-permissions": "0.0.9",
-    "ant-design-pro": "2.2.1",
     "antd": "^4.7.3",
-    "dotenv": "^6.0.0",
-    "firebase": "^7.14.1",
-    "graphql": "^14.0.2",
     "graphql-orm-connetor": "^0.1.3",
-    "graphql-tag": "^2.10.0",
     "i18next": "^17.0.14",
     "i18next-browser-languagedetector": "^3.0.3",
     "i18next-xhr-backend": "^3.1.2",
-    "keycloak-js": "^12.0.1",
-    "mixpanel-browser": "^2.35.0",
     "mobx": "^5.0.3",
     "mobx-react": "^5.4.4",
-    "moment": "^2.29.1",
-    "numeral": "^2.0.6",
-    "react-chat-widget": "^2.1.4-1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.3",
     "react-i18next": "^10.12.3",
-    "react-infinite-scroller": "^1.2.1",
-    "react-markdown": "^4.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts-ts": "^3.1.0",
     "sw-precache-cra": "^1.0.0-alpha.2",
     "webpanel-admin": "git+https://github.com/webpanel/admin.git#a87de60",
     "webpanel-antd": "^0.2.10",
-    "webpanel-comments": "^0.1.3",
     "webpanel-data": "^0.2.9",
-    "webpanel-files": "^0.3.4",
-    "webpanel-i18n": "^0.1.0",
-    "webpanel-notifications": "^0.1.1"
+    "webpanel-i18n": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -56,12 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
-    "@storybook/addon-actions": "^5.2.3",
-    "@storybook/addon-links": "^5.2.3",
-    "@storybook/addons": "^5.2.3",
-    "@storybook/react": "^5.2.3",
     "@types/jest": "^23.3.1",
-    "@types/mixpanel-browser": "^2.35.0",
     "@types/node": "^10.5.8",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
